# VTFWorkbench

./: .gitignore  CMakeLists.txt  README.md
include/: Helper.hpp  MaterialConstructor.hpp  RootWindow.hpp  TextureConvert.hpp
src/: Helper.cpp  MaterialConstructor.cpp  RootWindow.cpp  TextureConvert.cpp  main.cpp
